fix: combine cocktail infredient amount and unit to one column
